force-app/main/default/objects/Weather_Alert__c/Weather_Alert__c.object-meta.xml
<CustomObject>
    <label>Weather Alert</label>
    <nameField>
        <displayFormat>WA-{00000}</displayFormat>
        <label>Alert Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Weather Alerts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>