force-app/main/default/objects/Weather_Alert__c/fields/Alert_Date__c.field-meta.xml
<CustomField>
    <fullName>Alert_Date__c</fullName>
    <label>Alert Date</label>
    <type>Date</type>
</CustomField>