force-app/main/default/objects/Weather_Alert__c/fields/Alert_Type__c.field-meta.xml
<CustomField>
    <fullName>Alert_Type__c</fullName>
    <label>Alert Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rain</fullName>
            </value>
            <value>
                <fullName>Thunderstorm</fullName>
            </value>
            <value>
                <fullName>Severe Thunderstorm</fullName>
            </value>
            <value>
                <fullName>Wind</fullName>
            </value>
            <value>
                <fullName>Heat</fullName>
            </value>
            <value>
                <fullName>Freeze</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>