force-app/main/default/objects/Weather_Alert__c/fields/End_DateTime__c.field-meta.xml
<CustomField>
    <fullName>End_DateTime__c</fullName>
    <label>End Date/Time</label>
    <type>DateTime</type>
</CustomField>