force-app/main/default/objects/Weather_Alert__c/fields/NWS_Area_Description__c.field-meta.xml
<CustomField>
    <fullName>NWS_Area_Description__c</fullName>
    <label>NWS Area Description</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>