force-app/main/default/objects/Weather_Alert__c/fields/NWS_Classification__c.field-meta.xml
<CustomField>
    <fullName>NWS_Classification__c</fullName>
    <label>NWS Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Extreme</fullName>
            </value>
            <value>
                <fullName>Severe</fullName>
            </value>
            <value>
                <fullName>Moderate</fullName>
            </value>
            <value>
                <fullName>Minor</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
                <default>true</default>
                <label>Unknown</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>