force-app/main/default/objects/Weather_Alert__c/fields/Schedule_Day__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Day__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Schedule Day</label>
    <referenceTo>Schedule_Day__c</referenceTo>
    <relationshipLabel>Weather Alerts</relationshipLabel>
    <relationshipName>Weather_Alerts</relationshipName>
    <type>Lookup</type>
</CustomField>