force-app/main/default/objects/Weather_Alert__c/fields/Source_Location_Type__c.field-meta.xml
<CustomField>
    <fullName>Source_Location_Type__c</fullName>
    <label>Source Location Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lot GPS</fullName>
            </value>
            <value>
                <fullName>Stop GPS</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>